JNAerator: bulk format